Implemented content switching

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
     <script>
         const menu = document.querySelector('app-tab-group');
-        menu.menuItems = ['1', '2', '3'];
+        menu.tabs = ['1', '2', '3'];
     </script>
 </body>
 </html>
