added monaco editor

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>nyaotepad</title>
-    <link href="./src/style.css" rel="stylesheet">
-    <script src="./src/tab-group.ts" type="module"></script>
-</head>
-<body>
-    <app-tab-group></app-tab-group>
-
-    <script>
-        const menu = document.querySelector('app-tab-group');
-        menu.tabs = ['1', '2', '3'];
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lit Code Editor</title>
+    <script type="module" src="/src/code-editor.ts"></script>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100vh;
+      }
+    </style>
+  </head>
+  <body>
+    <app-tabs></app-tabs>
+    <code-editor>
+    </code-editor>
+  </body>
 </html>
-
