--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lit Code Editor</title>
-    <script type="module" src="/src/code-editor.ts"></script>
-    <script type="module" src="/src/tabs.ts"></script>
+    <script type="module" src="/src/app"></script>
     <style>
       body {
         margin: 0;
@@ -18,6 +17,6 @@
     </style>
   </head>
   <body>
-    <app-tabs/>
+    <app-root/>
   </body>
 </html>
